# atrius-hfs

./: .gitattributes  .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  README.md  ROADMAP.md  directory-tree.txt
.github/workflows/: ci-extended.yml  ci.yml  claude-code-review.yml  claude.yml  inferno.yml  setup-runner.yml
crates/fhir/: Cargo.toml
crates/fhir-gen/: Cargo.toml
crates/fhir-gen/src/: directory_output_helpers.rs  lib.rs
crates/fhir-macro/: Cargo.toml
crates/fhir-macro/src/: lib.rs
crates/fhir-validation/: Cargo.toml
crates/fhir-validation-gen/: Cargo.toml
crates/fhir-validation-gen/data/: activity_definition.json  base_types.json  medication.json  observation.json  patient.json  profiles-types.json
crates/fhir-validation-gen/src/: emit.rs  extract.rs  main.rs  model.rs  versions.rs
crates/fhir-validation-types/: Cargo.toml
crates/fhir-validation-types/src/: lib.rs
crates/fhir-validation/src/: core.rs  invariant_evaluator.rs  invariants.rs  lib.rs  terminology.rs
crates/fhir-validation/src/r4/: generated.rs  mod.rs
crates/fhir-validation/src/r4/binding/: codeable_concept.rs  common.rs  mod.rs  primitive_code.rs
crates/fhir-validation/tests/common/: fixtures.rs
crates/fhir-validation/tests/r4/: patient.rs
crates/fhir-valueset-gen/: Cargo.toml
crates/fhir-valueset-gen/src/: generator.rs  indexer.rs  main.rs  models.rs  parser.rs
crates/fhir/src/: lib.rs
crates/fhir/tests/data/xml/R6/: capabilitystatement-base.xml  dataelements.xml  explanationofbenefit.profile.xml  search-parameters.xml
crates/fhirpath/: Cargo.toml  README.md
crates/fhirpath-support/src/: lib.rs
crates/fhirpath/src/: aggregate_function.rs  aggregate_math_functions.rs  boolean_functions.rs  boundary_functions.rs  cli.rs  collection_functions.rs  collection_navigation.rs  contains_function.rs  conversion_functions.rs  date_operation.rs  datetime_impl.rs  debug_trace.rs  distinct_functions.rs  evaluator.rs  extension_function.rs  format_functions.rs  handlers.rs  interval_functions.rs  lib.rs  long_conversion.rs  not_function.rs  parse_debug.rs  parser.rs  polymorphic_access.rs  reference_key_functions.rs  repeat_all_function.rs  repeat_function.rs  resource_type.rs  set_operations.rs  terminology_functions.rs  type_function.rs  type_inference.rs
crates/fhirpath/tests/: all_function_tests.rs  context_trace_test.rs  date_operation_tests.rs  enhanced_variable_tests.rs  evaluator_tests.rs  join_function_test.rs  precision_tests.rs  r4_tests.rs  tree_navigation_tests.rs  type_preservation_integration_test.rs  type_reflection_tests.rs  uri_type_test.rs  uuid_type_preservation_test.rs
crates/fhirpath/tests/common/: context.rs  runner.rs
crates/hfs/: Cargo.toml  build.rs
crates/hfs/src/: main.rs
crates/persistence/: Cargo.toml  README.md
crates/persistence/src/backends/: mod.rs
crates/persistence/src/backends/s3/: backend.rs  bulk_export.rs  bulk_submit.rs  bundle.rs  client.rs  config.rs  keyspace.rs  mod.rs  models.rs  storage.rs  tests.rs
crates/persistence/src/search/: extractor.rs
crates/persistence/tests/: minio_s3_tests.rs  s3_tests.rs
crates/persistence/tests/common/: capabilities.rs
crates/pysof/: Cargo.toml  PYPI_CHECKLIST.md  README.md  pyproject.toml
crates/rest/: Cargo.toml
crates/rest/src/: config.rs
crates/rest/src/handlers/: batch.rs  health.rs
crates/rest/tests/: batch_conformance.rs
crates/serde/: Cargo.toml
crates/serde-support/: Cargo.toml
crates/sof/: Cargo.toml
crates/sof/src/: handlers.rs  lib.rs  traits.rs
crates/sof/tests/: debug_boolean_test.rs  test_runner_integration.rs
