[workspace]
members = [
	"crates/*",
]
# Build all Rust crates by default, but skip pysof unless explicitly requested.
# This keeps `cargo build` working on machines without Python while still
# making `crates/pysof` an actual workspace member for maturin.
default-members = [
	"crates/fhir",
	"crates/fhir-gen",
	"crates/fhir-macro",
	"crates/fhirpath",
	"crates/fhirpath-support",
	"crates/serde",
	"crates/serde-support",
	"crates/hfs",
	"crates/persistence",
	"crates/rest",
	"crates/sof",
]
resolver = "2"

[workspace.package]
version = "0.1.45"
edition = "2024"
license = "MIT"
authors = ["Helios Software"]
repository = "https://github.com/HeliosSoftware/hfs"
rust-version = "1.90"

[workspace.dependencies]
serde = { version = "=1.0.220", features = ["derive"] }
serde_json = "=1.0.143"
helios-fhir = { path = "crates/fhir" }
chrono = { version = "0.4", features = ["serde"] }
