[package]
name = "helios-fhir-gen"
version.workspace = true
edition.workspace = true
description = "The helios-fhir-gen crate is module that serves as the cornerstone for generating Rust code from official FHIR (Fast Healthcare Interoperability Resources) specifications. This tool transforms FHIR StructureDefinitions into Rust types, enabling type-safe interaction with FHIR resources across multiple specification versions."
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage = "https://github.com/HeliosSoftware/hfs/tree/main/crates/fhir-gen"
readme = "README.md"
keywords = ["helios-software", "hl7", "fhir", "helios-fhir-server", "codegen"]
exclude = ["resources/**"]

[features]
default = ["R4"]
R4 = ["helios-fhir/R4"]
R4B = ["helios-fhir/R4B"]
R5 = ["helios-fhir/R5"]
R6 = ["helios-fhir/R6"]
skip-r6-download = []

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
helios-fhir = { path = "../fhir", version = "0.1.45" }
clap = { version = "4.4", features = ["derive"] }
chrono = { workspace = true }

[build-dependencies]
reqwest = { version = "0.12", features = ["blocking"] }
zip = "0.6"
serde_json = { workspace = true }

[package.metadata.docs.rs]
features = ["R4"]
rustdoc-args = ["--cfg", "docsrs"]
