[package]
name = "helios-fhir-macro"
version.workspace = true
edition.workspace = true
description = "The helios-fhirpath-support crate serves as a bridge module that provides essential types and traits for integration between the FHIRPath evaluator, it's associated functions, and also the FHIR model code in the fhir module, and it's generated code that is created by fhir_macro."
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage = "https://github.com/HeliosSoftware/hfs/tree/main/crates/fhir-macro"
readme = "README.md"
keywords = ["helios-software", "hl7", "fhir", "helios-fhir-server", "macro"]

[lib]
proc-macro = true

[dependencies]
syn = { version = "2.0", features = ["full", "derive", "parsing"] } # Updated syn version and features
quote = "1.0"
proc-macro2 = "1.0"
serde = { workspace = true }
serde_json = { workspace = true }
heck = "0.5" # For case conversion
helios-fhirpath-support = { path = "../fhirpath-support", version = "0.1.45" }
