[package]
name = "fhir-validation-gen"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true

[features]
default = ["R4"]
R4 = ["helios-fhir/R4"]
R4B = ["helios-fhir/R4B"]
R5 = ["helios-fhir/R5"]
R6 = ["helios-fhir/R6"]

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
helios-fhir = { path = "../fhir" }
helios-fhir-gen = { path = "../fhir-gen"}
