[package]
name = "atrius-fhir-valueset-gen"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
helios-fhir-gen = { path = "../fhir-gen"}
serde = { workspace = true}
serde_json =  { workspace = true }
anyhow = "1.0"
rust_decimal = "1.40.0"