[package]
name = "helios-fhirpath"
version.workspace = true
edition.workspace = true
description = "This is an implementation of HL7's FHIRPath Specification."
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage = "https://github.com/HeliosSoftware/hfs/tree/main/crates/fhirpath"
readme = "README.md"
keywords = ["helios-software", "hl7", "fhir", "helios-fhir-server", "fhirpath"]

[features]
default = ["R4"]
R4 = ["helios-fhir/R4"]
R4B = ["helios-fhir/R4B"]
R5 = ["helios-fhir/R5"]
R6 = ["helios-fhir/R6"]

[dependencies]
helios-fhir = { path = "../fhir", version = "0.1.45" }
helios-fhirpath-support = { path = "../fhirpath-support", version = "0.1.45" }
chumsky = "0.10"
roxmltree = "0.20"
chrono = { workspace = true } # For date/time parsing and functions
rust_decimal = { version = "1.0", features = ["serde-with-float", "macros"] }
rust_decimal_macros = "1.0"
regex = "1" # For string matches/replaceMatches functions
serde = { workspace = true }
serde_json = { workspace = true }
once_cell = "1.0" # For lazy initialization of static values
lazy_static = "1.4" # For lazy static initialization of tokio runtime
base64 = "0.22" # For encode/decode functions
hex = "0.4" # For hex encode/decode functions
octofhir-ucum = { version = "0.5", features = ["fhir"] } # For UCUM unit handling and conversion
reqwest = { version = "0.12", features = ["json"] } # For terminology server HTTP calls
rayon = "1.8" # For data parallelism
arc-swap = "1.6" # For lock-free atomic data structures
parking_lot = "0.12" # For better mutexes than std

# CLI and server dependencies
clap = { version = "4.5", features = ["derive", "env"] }
tokio = { version = "1", features = ["full"] }
axum = { version = "0.8" }
tower = { version = "0.5" }
tower-http = { version = "0.5", features = ["cors", "trace"] }
http = { version = "1.0" }
tracing = { version = "0.1" }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
axum-test = "18.0"
tempfile = "3.0"
criterion = { version = "0.5", features = ["html_reports"] }
futures = "0.3"

[[bin]]
name = "fhirpath-cli"
path = "src/bin/fhirpath-cli.rs"

[[bin]]
name = "fhirpath-server"
path = "src/bin/fhirpath-server.rs"

[[bench]]
name = "parser_benches"
harness = false

[[bench]]
name = "evaluator_benches"
harness = false

[[bench]]
name = "cli_benches"
harness = false

[[bench]]
name = "server_benches"
harness = false

[package.metadata.docs.rs]
features = ["R4"]
rustdoc-args = ["--cfg", "docsrs"]

