[package]
name = "helios-hfs"
version.workspace = true
edition.workspace = true
description = "Helios FHIR Server - A high-performance FHIR R4/R4B/R5/R6 server"
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage = "https://github.com/HeliosSoftware/hfs/tree/main/crates/hfs"
readme = "README.md"
keywords = ["helios-software", "hl7", "fhir", "helios-fhir-server", "healthcare"]

[[bin]]
name = "hfs"
path = "src/main.rs"

[features]
default = ["R4", "sqlite"]

# FHIR version features
R4 = ["helios-fhir/R4", "helios-rest/R4"]
R4B = ["helios-fhir/R4B", "helios-rest/R4B"]
R5 = ["helios-fhir/R5", "helios-rest/R5"]
R6 = ["helios-fhir/R6", "helios-rest/R6"]

# Database backends
sqlite = ["helios-rest/sqlite"]
postgres = ["helios-rest/postgres"]
mongodb = ["helios-rest/mongodb"]
elasticsearch = ["helios-rest/elasticsearch"]

[build-dependencies]
reqwest = { version = "0.12", features = ["blocking"] }

[dependencies]
helios-fhir = { path = "../fhir", version = "0.1.41" }
helios-rest = { path = "../rest", version = "0.1.41", default-features = false }
helios-persistence = { path = "../persistence", version = "0.1.41", default-features = false }

# Web framework
axum = "0.8"

# Async runtime
tokio = { version = "1", features = ["full"] }

# CLI and configuration
clap = { version = "4.0", features = ["derive", "env"] }

# Logging
tracing = "0.1"

# Error handling
anyhow = "1.0"

# Vendor OpenSSL when cross-compiling for Linux ARM64 (the macOS runner
# doesn't have target-platform OpenSSL dev libs).  Cargo feature unification
# makes this apply to every transitive openssl-sys consumer in the workspace.
[target.'cfg(all(target_arch = "aarch64", target_os = "linux"))'.dependencies]
openssl = { version = "0.10", features = ["vendored"] }
