[package]
name = "pysof"
version.workspace = true
edition = "2024"
description = "Python bindings for helios-sof using PyO3"
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage = "https://github.com/HeliosSoftware/hfs/tree/main/crates/pysof"
rust-version.workspace = true
keywords = ["helios-software", "hl7", "fhir", "helios-fhir-server", "sql-on-fhir"]

# PyO3 extension metadata
[lib]
name = "pysof"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = ">=0.27", features = ["extension-module", "generate-import-lib"] }
helios-sof = { path = "../sof", version = "0.1.45" }
helios-fhir = { path = "../fhir", version = "0.1.45" }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { version = "0.4", features = ["serde"] }
pythonize = "0.27"
csv = "1.3"

[features]
default = ["R4"]
R4 = ["helios-sof/R4", "helios-fhir/R4"]
R4B = ["helios-sof/R4B", "helios-fhir/R4B"]
R5 = ["helios-sof/R5", "helios-fhir/R5"]
R6 = ["helios-sof/R6", "helios-fhir/R6"]

# Vendor OpenSSL when cross-compiling for Linux ARM64
[target.'cfg(all(target_arch = "aarch64", target_os = "linux"))'.dependencies]
openssl = { version = "0.10", features = ["vendored"] }

[build-dependencies]
pyo3-build-config = "0.27"
