[package]
name = "helios-serde-support"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage = "https://github.com/HeliosSoftware/hfs/tree/main/crates/serde-support"
description = "Shared serde helpers for FHIR serialization/deserialization"
keywords = ["helios-software", "hl7", "fhir", "helios-fhir-server", "serde"]

[features]
xml = []

[package.metadata.docs.rs]
features = ["xml"]
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
